--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,8 @@
-# Created by .ignore support plugin (hsz.mobi)
-.idea
+# for Mac OS X System Files
+.DS_Store
+Thumbs.db
+# for IDEA
+*/build/*
+.idea/*
+*.iml
+/out/*
